--- a/frontend/my-app/src/Chat.css
+++ b/frontend/my-app/src/Chat.css
@@ -1,42 +1,61 @@
 .chat {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 80%; /* Adjust this to change the width of the chat */
-    margin: 0 auto; /* This will center the chat on the page */
-    font-family: 'Arial', sans-serif; /* Use a modern font */
-  }
-  
-  .chat__messages {
-    flex: 1;
-    overflow: auto;
-    padding: 10px;
-    font-size: 20px; /* Increase the font size */
-  }
-  
-  .chat__input {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    border-radius: 15px;
-  }
-  
-  .chat__input input {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    border-radius: 15px;
-    font-size: 20px; /* Increase the font size */
-    background-color: white;
-  }
-  
-  .chat__input button {
-    padding: 10px;
-    border: none;
-    border-radius: 15px;
-    background-color: cyan;
-    color: white;
-    cursor: pointer;
-    font-size: 20px; /* Increase the font size */
-  }
-  
+  display: flex;
+  flex-direction: column-reverse;
+  height: 100vh;
+  width: 80%;
+  margin: 0 auto;
+  font-family: 'Arial', sans-serif;
+}
+
+.chat__messages {
+  flex: 1;
+  overflow: auto;
+  padding: 10px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.chat__message {
+  max-width: 60%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 20px;
+}
+
+.chat__userMessage {
+  align-self: flex-end;
+  background-color: #dcf8c6;
+}
+
+.chat__input {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  /* border: 2px solid cyan; */
+  border-radius: 15px;
+  background-color: transparent;
+}
+
+.chat__input input {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  font-size: 20px;
+  background-color: black;
+}
+
+.chat__input button {
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: cyan;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.chat__input form{
+  border-color: transparent;
+}
