--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -1,17 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  display: flex;
+  height: 100%;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   background: linear-gradient(to right, purple, pink, blue);
 }
 
 .app {
-  width: 80%; /* Adjust this to change the width of the chat */
-  height: 80vh;
-  display: flex;
+  width: 100%; /* Adjust this to change the width of the chat */
+  height: 100%;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   font-family: 'Arial', sans-serif; /* Use a modern font */
