--- a/frontend/my-app/src/components/Container/Container.css
+++ b/frontend/my-app/src/components/Container/Container.css
@@ -1,5 +1,5 @@
 .container {
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     width: 100%;
     height: 100vh;
@@ -10,4 +10,6 @@
 
 .chat__container {
     width: 60%;
+    display: flex;
+    justify-content: center;
 }
